<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/RelativeLayout"
    android:paddingBottom="@dimen/activity_padding_bottom"
    android:paddingTop="@dimen/activity_padding_top">

    <TextView
        android:id="@+id/question"
        style="@style/QuestionText"
        android:text="@string/fourth_q" />

    <ImageView
        android:id="@+id/questionImage"
        style="@style/QuestionImage" />

    <LinearLayout
        android:id="@+id/line2"
        style="@style/LinearLayout">

        <CheckBox
            android:id="@+id/choice_1"
            style="@style/RadioButton"
            android:text="@string/q_4_a"
            android:theme="@style/CheckBox" />

        <CheckBox
            android:id="@+id/choice_2"
            style="@style/RadioButton"
            android:text="@string/q_4_b"
            android:theme="@style/CheckBox" />

        <CheckBox
            android:id="@+id/choice_3"
            style="@style/RadioButton"
            android:text="@string/q_4_c"
            android:theme="@style/CheckBox" />

        <CheckBox
            android:id="@+id/choice_4"
            style="@style/RadioButton"
            android:text="@string/q_4_d"
            android:theme="@style/CheckBox" />

    </LinearLayout>

    <TextView
        android:id="@+id/solution"
        style="@style/Solution2"
        android:layout_below="@id/line2" />

    <Button
        android:id="@+id/submit_button"
        style="@style/button"
        android:onClick="submitButton"
        android:text="@string/submit"
        android:visibility="visible" />

    <Button
        android:id="@+id/next"
        style="@style/button"
        android:onClick="next"
        android:text="@string/next"
        android:visibility="invisible" />

</RelativeLayout>
