<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/RelativeLayout">

    <TextView
        android:id="@+id/result"
        style="@style/Score_text"
        android:text="@string/your_score" />

    <LinearLayout
        android:id="@+id/linear"
        style="@style/LinearLayout_score">

        <TextView
            android:id="@+id/right"
            style="@style/Scores"
            android:text="@string/score3"
            android:textSize="@dimen/score_text_size1" />

        <TextView
            style="@style/Scores"
            android:text="@string/score4"
            android:textSize="@dimen/score_text_size2" />

        <TextView
            android:id="@+id/sum"
            style="@style/Scores"
            android:text="@string/score3"
            android:textSize="@dimen/score_text_size2" />
    </LinearLayout>


    <ImageView
        android:id="@+id/ScoreImage"
        style="@style/ScoreImage" />

    <TextView
        android:id="@+id/result_text"
        style="@style/Result_text"
        android:text="@string/result_padawan" />


    <Button
        android:id="@+id/restartButton"
        style="@style/Restart_Button"
        android:onClick="restartButton"
        android:text="@string/end" />
</RelativeLayout>