<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/RelativeLayout">

    <TextView
        android:id="@+id/question"
        style="@style/QuestionText"
        android:text="@string/first_q" />

    <ImageView
        android:id="@+id/questionImage"
        style="@style/QuestionImage" />

    <EditText
        android:id="@+id/txtAnswer"
        style="@style/EditText"
        android:backgroundTint="#0c53e2"
        android:hint="@string/q1_hint" />

    <TextView
        android:id="@+id/solution"
        style="@style/Solution" />

    <Button
        android:id="@+id/submit_button"
        style="@style/button"
        android:onClick="submitButton"
        android:text="@string/submit"
        android:visibility="visible" />

    <Button
        android:id="@+id/next"
        style="@style/button"
        android:onClick="next"
        android:text="@string/next"
        android:visibility="invisible" />

</RelativeLayout>